# ShoulderToShoulder

./: .gitignore  CODEOWNERS.md  LICENSE  README.md  endpoints.md  playground.py  playground2.py  pyproject.toml  requirements.txt
backend/: .flake8  .pre-commit-config.yaml  environment.yml  gis_module.py  gis_module_tests.py  pyproject.toml
backend/ShoulderToShoulder/: db.sqlite3
backend/ShoulderToShoulder/ShoulderToShoulder/: asgi.py  settings.py  urls.py  wsgi.py
backend/ShoulderToShoulder/ml/ml/: model.py
backend/ShoulderToShoulder/s2s/: __init__.py  admin.py  middleware.py  permissions.py  serializers.py  urls.py  views.py
backend/ShoulderToShoulder/s2s/db_models/: __init__.py  availability.py  calendar.py  choice.py  event.py  event_suggestion.py  group.py  hobbies.py  onboarding.py  profile.py  scenarios.py  user.py  useradmin.py
backend/ShoulderToShoulder/s2s/migrations/: 0001_initial.py  0002_applicationtoken.py  0002_hobby_delete_user.py  0002_hobby_scenario_format_alter_hobby_type.py  0002_user_phone_number.py  0003_alter_user_onboarded.py  0003_choice.py  0003_delete_hobby.py  0004_alter_onboarding_age_alter_onboarding_distance_and_more.py  0004_initial.py  0004_remove_choice_age_range_remove_choice_distance_and_more.py  0005_alter_scenarios_day_of_week1_and_more.py  0006_alter_onboarding_age_alter_onboarding_distance_and_more.py  0007_onboarding_leastinterestedin_and_more.py  0008_rename_leastinterestedin_onboarding_least_interested_hobbies_and_more.py  0011_alter_onboarding_user_id.py  0012_alter_onboarding_user_id.py  0014_alter_onboarding_distance_and_more.py
backend/ShoulderToShoulder/s2s/models/: __init__.py  hobbies.py
backend/ShoulderToShoulder/s2s/tests/: conftest.py  test_views.py
backend/ml/ml/: dataset.py  model.py  train.py
backend/ml/ml/weights/: parameters.pkl
backend/ml/tests/: test_dataset.py  test_model.py  test_train.py
backend/shoulder/: django_tests.py  gis_module.py  manage.py  pytest.ini
backend/shoulder/ShoulderToShoulder/: settings.py  urls.py
backend/shoulder/config/gunicorn/: dev.py
backend/shoulder/gis/: gis_module.py  gis_module_tests.py
backend/shoulder/ml/ml/: dataset.py  model.py  recommendation.py  train.py
backend/shoulder/ml/tests/: test_dataset.py  test_model.py  test_train.py
backend/shoulder/s2s/: admin.py  apps.py  middleware.py  permissions.py  serializers.py  urls.py  views.py
backend/shoulder/s2s/db_models/: __init__.py  app_token.py  availability.py  calendar.py  choice.py  event.py  event_suggestion.py  group.py  hobby.py  hobby_type.py  onboarding.py  panel_events.py  panel_scenarios.py  panel_user_preferences.py  profile.py  scenarios.py  suggestion_events.py  suggestion_results.py  user_events.py
backend/shoulder/s2s/migrations/: 0001_initial.py  0002_alter_userevents_user_rating 2.py  0002_eventsuggestion_user_id.py  0002_onboarding_latitude_onboarding_longitude.py  0002_remove_event_attendees_and_more.py  0002_remove_hobby_description.py  0002_remove_profile_profile_picture.py  0002_userevents_attended_userevents_rsvp.py  0003_alter_userevents_rsvp.py  0003_alter_userevents_user_rating.py  0003_onboarding_onboarded.py  0003_profile_profile_picture.py  0003_rename_hobby_category_art_eventsuggestion_hobby_category_arts_and_culture_and_more.py  0004_alter_profile_profile_picture.py  0004_eventsuggestion_pref_hobby_category_arts_and_culture_and_more.py  0004_merge_20240516_0054.py  0005_alter_profile_profile_picture.py  0005_onboarding_latitude_onboarding_longitude_and_more.py  0006_alter_profile_profile_picture.py  0007_remove_event_event_id_alter_event_max_attendees_and_more.py  0008_rename_address_event_address1_event_address2_and_more.py  0009_alter_onboarding_sexual_orientation.py  0009_event_description.py  0010_alter_onboarding_age_alter_onboarding_distance_and_more.py  (+21 more)
backend/shoulder/tests/: conftest.py  pytest.ini  test_data.pkl  test_data2.pkl  test_pretrain.pkl  test_recommendation.py  test_train.py  test_views.py
backend/tests/: test_data.pkl  test_dataset.py  test_gis.py  test_model.py  test_params.pkl  test_pretrain.pkl  test_recommendation.py  test_train.py
ml/: pyproject.toml
ml/ml/: model.py  train.py
ml/tests/: test_train.py
(+180 files in other folders)
