[tool.poetry]
name = "shouldertoshoulder"
version = "0.1.0"
description = "repo environment for ShoulderToShoulder web application"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
jax = "^0.4.26"
optax = "^0.2.2"
matplotlib = "^3.8.4"
tqdm = "^4.66.2"


icu = "^73.2"
libuv = "^1.48.0"
libzlib = "^1.2.13"
nodejs = "^20.9.0"
openssl = "^3.2.1"

ca-certificates = "^2024.3.11"
zlib = "^1.2.13"
libcxx = "^16.0.6"


asgiref = "^3.8.1"
django = "^5.0.3"
djangorestframework = "^3.15.1"
sqlparse = "^0.4.4"
black = "^23.11.0"
bzip2 = "^1.0.8"
click = "^8.1.7"
expat = "^2.5.0"
isort = "^5.9.3"
libffi = "^3.4.4"
mypy_extensions = "^1.0.0"
ncurses = "^6.4"
packaging = "^23.2"
pathspec = "^0.10.3"
pip = "^23.3.1"
platformdirs = "^3.10.0"
readline = "^8.2"
setuptools = "^68.2.2"
sqlite = "^3.41.2"
tk = "^8.6.12"
tzdata = "2024a"
wheel = "^0.41.2"
xz = "^5.4.6"




[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
    /(
        \.eggs/|
        \.git/|
        \.hg/|
        \.mypy_cache/|
        \.tox/|
        \.venv/|
        \.svn/|
        _build/|
        buck-out/|
        build/|
        dist/
    )|
    ^docs/|
    ^examples/
'''


[tool.poetry.plugins."poetry.plugins.tools.black"]
repository = "https://github.com/psf/black"
rev = "21.12b0"
hooks = "black"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
