[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
jax = "^0.4.26"
optax = "^0.2.2"
matplotlib = "^3.8.4"
tqdm = "^4.66.2"
django = "^5.0.4"
click = "^8.1.7"
djangorestframework = "^3.15.1"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
